@@ -1,4 +1,4 @@
 DIST fontmatrix-0.4.2-Source.tar.gz 656806 RMD160 64b54eea1b78101650296495d68e6813dccaea6c SHA1 6d4623b0b4169e9544259d4b04f9077c902b8dc3 SHA256 3b5ad1e27b33d81fea610d4748a9a42107006a36bff277529eb3377670600075
-EBUILD fontmatrix-0.4.2.ebuild 462 RMD160 e421dd40d526a08dff29ebdc83eced2f311e6904 SHA1 8fe6937b4cd52b2192ce876f525a539323079dc0 SHA256 82a08759a9338e3f7466e99d4f05ffe7460631eb3e80aa31e1a4462e19adfc1d
-MISC ChangeLog 1008 RMD160 202f54efe1d3bdd1bb9a73e2d185a67e50e123a1 SHA1 e87693aeeaae39c295cabd8a93eab953072a5262 SHA256 441d12ca859423c728f8a7725bf366c50f627faf50066bf2e03bbb16f9226807
+EBUILD fontmatrix-0.4.2.ebuild 1030 RMD160 29124f6f923693f0836b212e5eca700b047e5fbe SHA1 0f59335724eac237691065d385b1dfae2f1849da SHA256 4c4154bb3a7969cd752b45a486606444492591009e39c73b56eee08ed0f0e7c6
+MISC ChangeLog 1167 RMD160 02b4ab70dce1d14d9950536e7217392394de02ad SHA1 e8b9c51af52411e762e57ec5d291be52356d0aad SHA256 241bd66046a4434b15e629d9484067ec6dea808aedbff868c729b981cd15c508
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
