@@ -4,20 +4,42 @@
 
 EAPI=1
 
-inherit cmake-utils
+inherit cmake-utils qt4
 
-DESCRIPTION="A graphical font manager"
+DESCRIPTION="A font manager"
 HOMEPAGE="http://www.fontmatrix.net/"
-SRC_URI="http://www.fontmatrix.net/archives/${P}-Source.tar.gz"
+SRC_URI="http://www.fontmatrix.net/archives/${PN}-${PV}-Source.tar.gz"
 
-LICENSE="GPL-3"
+LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE=""
+KEYWORDS="~amd64 ~x86"
+
+IUSE="debug"
 
 RDEPEND=">=x11-libs/qt-4.3:4
-	=media-libs/freetype-2*"
-DEPEND="${RDEPEND}
-	dev-util/cmake"
+	>=media-libs/freetype-2"
 
-S="${WORKDIR}/${P}-Source/"
+DEPEND="${RDEPEND}"
+
+S=${WORKDIR}/${P}-Source
+B=${WORKDIR}/${PN}_build
+
+src_compile() {
+	local mycmakeargs="-DOWN_SHAPER=1"
+	cmake-utils_src_compile
+	cd ${B}
+	emake || die "emake failed"
+}
+
+src_install() {
+	dobin ${B}/src/${PN}
+	doicon "${S}/${PN}.png"
+	make_desktop_entry ${PN} "Fontmatrix" ${PN}.png
+}
+
+pkg_postinst() {
+	elog "If you encounter problems or just have questions or if you have"
+	elog " suggestions, please take time to suscribe to the undertype-users"
+	elog " mailing list ( https://mail.gna.org/listinfo/undertype-users )."
+	elog " If you want to reach us quickly, come to #fontmatrix at Freenode."
+}
