@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jul 2008; Markus Rennings (mren) <mren@mrmx.de>
+  fontmatrix-0.4.2.ebuild:
+  updated ebuild to the one from bugzilla, thx to Matteo 'The Peach' Pescarin
+
   08 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
   fontmatrix-0.4.2.ebuild:
   fixed a typo, thx to caratorn
